[package]
name = "feline"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
colored = "3.1.1"
dotenvy = "0.15.7"
egui = "0.34.1"
egui-wgpu = "0.34.1"
egui-winit = "0.34.1"
log = "0.4.29"
tokio = { version = "1.51.0", features = ["full"] }
wgpu = "29.0.1"
winit = "0.30.13"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
