[workspace]
members = ["crates/feline", "crates/feline-render"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
colored = "3.1.1"
dotenvy = "0.15.7"
egui = "0.34.1"
egui-wgpu = "0.34.1"
egui-winit = "0.34.1"
log = "0.4.29"
tokio = { version = "1.51.0", features = ["full"] }
wgpu = "29.0.1"
winit = "0.30.13"
