[package]
name = "feline-render"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
log.workspace = true
tokio.workspace = true
wgpu.workspace = true
winit.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
